# libzakcgi

./: .gitignore  Makefile.am  autogen.sh  configure.ac  debugcgi.sh  libzakcgi.pc.in
debian/: changelog  control  copyright  gbp.conf  libzakcgi-dev.install  libzakcgi.install  rules
debian/patches/: 0001-DESTDIR-support.patch  0002-Glib-old-version.patch  0003-Glib-old-version-gobject-macro.patch  0003-Glib-old-version.patch  0004-Backport-function-g_key_file_save_to_file.patch  0005-No-tests.patch  series
docs/reference/: Makefile.am  libzakcgi-docs.xml  libzakcgi-sections.txt  libzakcgi.types
src/: Makefile.am  commons.c  commons.h  form.c  form.h  formelement.c  formelement.h  formelementcheck.c  formelementcheck.h  formelementemail.c  formelementemail.h  formelementfiltertrim.c  formelementfiltertrim.h  formelementhidden.c  formelementhidden.h  formelementifilter.c  formelementifilter.h  formelementivalidator.c  formelementpassword.c  formelementpassword.h  formelementselect.c  formelementselect.h  formelementstring.c  formelementstring.h  formelementsubmit.c  formelementsubmit.h  formelementtext.c  formelementtext.h  formelementtextarea.c  formelementtextarea.h  libzakcgi.h  main.c  main.h  session.c  session.h  tag.c  tag.h  url.c  url.h
tests/: Makefile.am  cookies.c  env.c  form.c  form_xml.c  form_xml.xml  provapostcgi.html  querystring.c  redirect.c  session.c  tag.c  url.c
